--- a/exploremenu.html
+++ b/exploremenu.html
@@ -46,10 +46,10 @@
       the same time.
       <br> The general discontent of the current government was one of the main
       drivers of the protest. However, one of the most important was the breach
-      of the peace pact signed three years ago ending the 50 years of arm
-      conflict. Along with this, the new social, economic and environmental
-      policies and reforms, the killings of indigenous and social leaders and
-      the civilian deaths caused by the military force, among others."</br>
+      of the peace pact signed three years ago ending the 50 years of arm conflict.
+      Along with this, the new social, economic and environmental policies and
+      reforms, the killings of indigenous and social leaders and the civilian
+      deaths caused by the military force, among others."</br>
     </p>
   </div>
 </div>
