--- a/lebanonexplanation.html
+++ b/lebanonexplanation.html
@@ -49,8 +49,8 @@
                 milicy. </br>
               </p>
 
-              <div style="height:550px; margin:0% 0% 4% 21%">
-                <img src="img/Lebanon_1.jpg"></img>
+              <div style="height:500px; margin:0% 21% 8% 21%">
+                <img src="img/Lebanon/Lebanon_1.jpg"></img>
               </div>
 
               <p class="subtitleparabout"> What do people aim with the protests? <p>
@@ -87,8 +87,8 @@
 
                   <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
-                  <div style="background-color:white; height:550px; margin:0% 0% 4% 21%">
-                    <img src=""></img>
+                  <div style="height:500px; margin:0% 21% 8% 21%">
+                    <img src="img/Lebanon/Lebanon_2.jpg"></img>
                   </div>
 
                   <p class="subtitleparabout"> What are the consequences of the protests?<p>
@@ -111,9 +111,9 @@
                         </br>
                       </p>
 
-                        <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
-                          <img src=""></img>
-                        </div>
+                      <div style="height:500px; margin:0% 21% 8% 21%">
+                        <img src="img/Lebanon/Lebanon_3.jpg"></img>
+                      </div>
 
                         <p class="subtitleparabout"> Lebanon now <p>
                             <p class="parabout"> Lebanon formed a new government with Hassan Diab. He claimed to
