--- a/colombiaexplanation.html
+++ b/colombiaexplanation.html
@@ -18,50 +18,108 @@
     <div>
 
 
-      <h1 id="titoloabout"> XXXX </h1>
+      <h1 id="titoloabout"> Colombia </h1>
       <h2 id="goto" class="subtitle"> <a href="mapcolombia.html"> go to the map</a> </h2>
       <h2 id="goto" class="subtitle"> <a href="exploremenu.html"> back to menu</a> </h2>
-      <p class="parabout">lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-        aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-        luptatum zzril delenit augue duis dolore te feugait nulla facilisi.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-        quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero
-        eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+      <p class="subtitleparabout"> What triggered the protests?
+        <p>
+          <p class="parabout">
+            The protests in Colombia first started as an encounter of social
+            movements and the labor union. The initial reasons were triggered
+            by the initiatives and new reforms proposed by the current government
+            like reducing the minimum wage for young people salaries, eliminating
+            the pension system and privatizing public enterprises. However, this
+            was just the tip of the iceberg, because beneath of it there was an
+            accumulated feeling of unfairness and rage caused by a long list
+            of failing promises and injustices.
+            <br> And yet, the protest reached its breaking point when an authorized
+            bombing ended up killing eight innocent children. The government
+            claim that they were part of the guerrillas, so it was completely
+            argued. This event unleashed the rage of the population that was
+            already tired of being failed with the promises of the end of an
+            armed conflict that seems not to have any end. Along with it, many
+            social leaders are killed almost every day by insurgent forces that
+            has coincidentally increased with the election of the current
+            president, who is member of an extreme right party who has been
+            implicated in serious accusations of corruption, illicit enrichment,
+            paramilitary accusations and alleged killings and even massacres.
+            </br>
+          </p>
+
+          <div style="height:500px; margin:0% 21% 8% 21%">
+            <img src="img/Colombia/Colombia_3.jpg"></img>
+          </div>
+
+          <p class="subtitleparabout"> What do people aim with the protests? </p>
+
+              <p class="parabout">
+                Colombia, unlike other countries of Latin in America, has been
+                indifferent to the social protest, in part because it has been
+                stigmatized. However, the last protest held on the 21 of November
+                was, a thrilling awakening. But, why? most of all, because
+                Colombians couldn’t stand anymore the injustice and the accumulated
+                unfair harm. Being one of the most unequal of all Latin American
+                countries where just 1% of the richest people own the 80% of the
+                territory. Where the corruption steals 2000 millions USD every
+                year. Where having a different opinion and fight for it makes you
+                get killed. Where an ever going armed conflict has taken more
+                lives than all the Latin American dictatorships together. Because
+                they’re claiming the right to get to live in peace.
+                </p>
 
 
-
-      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
-
-        <img src=""></img>
-
-      </div>
+              <div style="height:500px; margin:0% 21% 8% 21%">
+                <img src="img/Colombia/Colombia_2.jpg"></img>
+              </div>
+              <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
 
+              <p class="subtitleparabout"> What are the consequences of the protests? <p>
 
-      <p class="parabout">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                  <p class="parabout">
+                    Among the consequences of the protest, further than the
+                    physical damages on several cities and blockages, there were
+                    also violence initiated by the government who sent the
+                    police riot to diminish and dissolve the protest, but ended
+                    up stigmatizing the pacific protest. The repression and the
+                    violence resulted in several detentions and missing people
+                    and a general rejection to this police force. Regardless of
+                    it, there was an important shift of the public opinion,
+                    followed by a dramatic drop of the positive image of the
+                    current government reaching its lower percentage to a 10%
+                    of approval. It was a real awakening, because there weren’t
+                    precedents of a movement like that. Full of creativity, the
+                    protest  joined Colombians together because of different reasons
+                    but aiming one cause, they wouldn’t want to be silent anymore.
+                  </p>
 
-      <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
+                      <div style="height:500px; margin:0% 21% 8% 21%">
+                        <img src="img/Colombia/Colombia_1.jpg"></img>
+                      </div>
 
-      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
-
-        <img src=""></img>
-
-      </div>
-
-      <p class="parabout">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-
-
-        <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
-
-          <img src=""></img>
-
-        </div>
+                      <p class="subtitleparabout"> Colombia now <p>
+                          <p class="parabout">The big protest was followed by
+                            multiple expressions that maintained the protest
+                            alive for more than two weeks, one of them called
+                            the “cacerolazo” joined people from different ages
+                            and places by hitting pans and bowls in order to
+                            continue the protest in a pacific way. Soon after,
+                            a curfew was decreed followed by a strategy rooted
+                            in panic, where the government managed to gradually
+                            decrease the participants on the protest. After that,
+                            the protest stopped in December because there were no
+                            guarantees from the government to set the dialogue.
+                            <br> Apparently nothing changed regarding the claims
+                            that were made, the government didn’t listen to the
+                            requests that people made and right now Colombia is
+                            facing the approval of many policies that was, on
+                            firsthand, the principal reasons why the strike started.
+                            People are trying to resume the protest, but it hasn’t
+                            been successful because it has turned into violence and
+                            not so many people are joining again.
+                            </br>
+                          </p>
+                          <p class="subtitleparabout" style="color:#ff8676; margin:0% 21% 4% 21%"> <a href="mapcolombia.html"> Be part of the Colombia fight in a P A C I F I C way! </a> </p>
 
     </div>
 
