--- a/colombiaexplanation.html
+++ b/colombiaexplanation.html
@@ -46,8 +46,8 @@
             </br>
           </p>
 
-          <div style="height:500px; margin:0% 21% 8% 21%">
-            <img src="img/Colombia/Colombia_3.jpg"></img>
+          <div style="margin:0% 21% 0% 21%">
+            <img class="imgs" src="img/Colombia/Colombia_3.jpg"></img>
           </div>
 
           <p class="subtitleparabout"> What do people aim with the protests? </p>
@@ -68,8 +68,8 @@
                 </p>
 
 
-              <div style="height:500px; margin:0% 21% 8% 21%">
-                <img src="img/Colombia/Colombia_2.jpg"></img>
+              <div style="margin:0% 21% 0% 21%">
+                <img class="imgs" src="img/Colombia/Colombia_2.jpg"></img>
               </div>
               <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
@@ -93,8 +93,8 @@
                     but aiming one cause, they wouldn’t want to be silent anymore.
                   </p>
 
-                      <div style="height:500px; margin:0% 21% 8% 21%">
-                        <img src="img/Colombia/Colombia_1.jpg"></img>
+                      <div style="margin:0% 21% 0% 21%">
+                        <img class"imgs" src="img/Colombia/Colombia_1.jpg"></img>
                       </div>
 
                       <p class="subtitleparabout"> Colombia now <p>
