--- a/hongkongexplanation.html
+++ b/hongkongexplanation.html
@@ -59,8 +59,8 @@
                 </p>
 
 
-                <div style="height:500px; margin:0% 21% 8% 21%">
-                  <img src="img/Hong Kong/Hong_Kong_1.jpg"></img>
+                <div style="margin:0% 21% 0% 21%">
+                  <img class="imgs" src="img/Hong Kong/Hong_Kong_1.jpg"></img>
                 </div>
 
               <p class="parabout"> The current protests in Hong Kong have part of their origin
@@ -111,8 +111,8 @@
 
               <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
-              <div style="height:500px; margin:0% 21% 8% 21%">
-                <img src="img/Hong Kong/Hong_Kong_3.jpg"></img>
+              <div style="margin:0% 21% 0% 21%">
+                <img class="imgs" src="img/Hong Kong/Hong_Kong_3.jpg"></img>
               </div>
 
               <p class="subtitleparabout"> What do people aim with the protests?<p>
@@ -153,8 +153,8 @@
                         </br>
                       </p>
 
-                      <div style="height:500px; margin:0% 21% 8% 21%">
-                        <img src="img/Hong Kong/Hong_Kong_2.jpg"></img>
+                      <div style="margin:0% 21% 0% 21%">
+                        <img class="imgs" src="img/Hong Kong/Hong_Kong_2.jpg"></img>
                       </div>
 
                       <p class="subtitleparabout"> Hong Kong now <p>
