--- a/lebanonexplanation.html
+++ b/lebanonexplanation.html
@@ -49,8 +49,8 @@
                 milicy. </br>
               </p>
 
-              <div style="height:500px; margin:0% 21% 8% 21%">
-                <img src="img/Lebanon/Lebanon_1.jpg"></img>
+              <div style="margin:0% 21% 0% 21%">
+                <img class="imgs" src="img/Lebanon/Lebanon_1.jpg"></img>
               </div>
 
               <p class="subtitleparabout"> What do people aim with the protests? <p>
@@ -87,8 +87,8 @@
 
                   <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
-                  <div style="height:500px; margin:0% 21% 8% 21%">
-                    <img src="img/Lebanon/Lebanon_2.jpg"></img>
+                  <div style="margin:0% 21% 0% 21%">
+                    <img class="imags" src="img/Lebanon/Lebanon_2.jpg"></img>
                   </div>
 
                   <p class="subtitleparabout"> What are the consequences of the protests?<p>
@@ -111,8 +111,8 @@
                         </br>
                       </p>
 
-                      <div style="height:500px; margin:0% 21% 8% 21%">
-                        <img src="img/Lebanon/Lebanon_3.jpg"></img>
+                      <div style="margin:0% 21% 0% 21%">
+                        <img class="imgs" src="img/Lebanon/Lebanon_3.jpg"></img>
                       </div>
 
                         <p class="subtitleparabout"> Lebanon now <p>
