--- a/lebanonexplanation.html
+++ b/lebanonexplanation.html
@@ -127,7 +127,7 @@
                               who don’t), making protests continue but not as peaceful as they were.
                               </br>
                             </p>
-                            <p class="subtitleparabout center" style="color:#ff8676; margin:0% 21% 4% 21%" > Be part of the Lebanese fight in a P A C I F I C way! </p>
+                            <p class="subtitleparabout" style="color:#ff8676; margin:0% 21% 8% 21%"> <a href="maplebanon.html"> Be part of the Lebanon fight in a P A C I F I C way! </a> </p>
     </div>
 
   </main>
