--- a/how.html
+++ b/how.html
@@ -20,14 +20,28 @@
 
       <h1 id="titoloabout">HOW IT WORKS</h1>
       <h2 id="goto" class="subtitle"> <a href="index2.html"> back </a> </h2>
-      <p class="parabout">lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-        aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-        luptatum zzril delenit augue duis dolore te feugait nulla facilisi.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-        quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero
-        eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+      <p class="parabout">The world is being shaken by the constant demonstrations
+        happening in different countries all over the world. They all have
+        something in common, people are being united to fight for something
+        bigger than them, for their own rights. You can be part of this fight by
+        joining them in a peaceful virtual way.
+        <br></br>
+        <br> With this website, you are able
+        to support them at a distance, you don’t have to be near in a physical
+        way but with your heart. But how can you demonstrate your support? </br>
+        <br> The aim is doing as much noise as we can to show our loudness. <br>
+        <br>1- Explore what is happening around the world.<br>
+        <br>(gif1)</br>
+        <br>2- Get in touch with the different protest. </br>
+        <br>(gif2)</br>
+        <br>3- Select the country you want to support and get deeper into your
+        understanding of the topic..<br>
+        <br>(gif3)</br>
+        <br>4-When you feel ready you can join the peaceful fight and make some noise. </br>
+        <br>(gif)</br>
+        <br>5-Fill the form with your data and watch what happens!</br>
+        <br>(gif5)</br>
+</p>
 
 
 
