About+changes in chile

--- a/how.html
+++ b/how.html
@@ -23,8 +23,8 @@
       <p class="parabout">The world is being shaken by the constant demonstrations
         happening in different countries all over the world. They all have
         something in common, people are being united to fight for something
-        bigger than them, for their own rights. You can be part of this fight by
-        joining them in a peaceful virtual way.
+        bigger than them, for their own rights, and they want to be heard. You
+        can be part of this fight by joining them in a peaceful virtual way.
         <br></br>
         <br> With this website, you are able
         to support them at a distance, you don’t have to be near in a physical
