--- a/about.html
+++ b/about.html
@@ -20,28 +20,58 @@
 
       <h1 id="titoloabout">ABOUT US</h1>
       <h2 id="goto" class="subtitle"> <a href="index2.html"> back </a> </h2>
-      <p class="parabout">lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-        aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-        luptatum zzril delenit augue duis dolore te feugait nulla facilisi.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-        quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero
-        eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
 
+      <p class="subtitleparabout"> Concept<p>
 
+      <p class="parabout">
 
-      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
+        <br> In the past months, in many countries, there have been
+        big manifestations. Protesting has been more than a legal right, it has
+        been an opportunity to shout out loud and express what has been difficult
+        to say by other means. Most of the protest are preceded by a general
+        feeling of discontent, usually accumulated by years of governments that
+        overstepped people’s rights. It’s then a call out when people can not
+        stand this kind of trait anymore. Either mass movements or individual
+        self-expression, they all are aiming one special request, they just want
+        to be heard.
+        </br>
+        <br> Protest has many forms, many symbols and many ways that people use
+        in the attempt of cause a certain disruption in order to boost desired
+        and needed changes on society. Even though they mean to be peaceful,
+        protests usually encounter many obstacles along the way. Many turn into
+        violence, finding several confrontations with the public force or, very
+        often, being stigmatised by means of communication. This fight commonly
+        leads a protest to cease.</br>
+        <br> This situation is terrible for the people living in those countries.
+        But what about the people living abroad that want to show their support?
+        They feel they cannot do much to help them in their fight. But what about
+        giving their support by a form of virtual activism. What if they can
+        support their fights from all over the world without facing the obstacle
+        of being far away in a physical way?</br>
+</p>
 
-        <!-- <img src=""></img> -->
+      <p class="subtitleparabout"> Our Project<p>
 
-      </div>
+      <p class="parabout">
+        <br> Our website aims to be a place that allows people
+        living abroad, being part of the movement. We are convinced that people
+        should have the right to be part of all the initiatives happening in the
+        world. We want to give them a voice, to make them be heard, to let them
+        be louder.</br>
+        <br>The question is how are we going to achieve that. Hopefully,
+        protests are creative catalysis, where “people’s desire to feel part of
+        something much bigger than themselves is what drives them to find new
+        means of protesting collectively”. Here is where things like the
+        “cacerolazo” appear.</br>
+        <br> Caserolazo cames from the Spanish word “cacerola” that means pot.
+        One of the main elements people is using to show their discomfort is the
+        sound of banged pots. The cacerolazo consists of a group of people making
+        noise by banging pots, pans and other kitchen utensils in order to call
+        for attention.</br>
+        <br>This sound is going to be the main element, the <strong>symbol</strong>
+        used to join these movements in a <strong>pacific way</strong>.</br>
 
-
-
-      <p class="parabout">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+</p>
 
       <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
       <div style="height:200px; margin:8% 21% 0% 21%">
