--- a/how.html
+++ b/how.html
@@ -31,9 +31,10 @@
         way but with your heart. But how can you demonstrate your support? </br>
         <br> The aim is doing as much noise as we can to show our loudness. <br>
         <br>1- Explore what is happening around the world.<br>
-        <br>(gif1)</br>
         <br>2- Get in touch with the different protest. </br>
-        <br>(gif2)</br>
+        <video controls loop class="videos">
+          <source src="movie.mov" type="video/mp4">
+          </video>
         <br>3- Select the country you want to support and get deeper into your
         understanding of the topic..<br>
         <br>(gif3)</br>
