--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
       <p class="parabout">
         <br> Our website aims to be a place that allows people
-        living abroad, being part of the movement. We are convinced that people
+        living abroad, to be part of the movement. We are convinced that people
         should have the right to be part of all the initiatives happening in the
         world. We want to give them a voice, to make them be heard, to let them
         be louder.</br>
