--- a/mapchile.html
+++ b/mapchile.html
@@ -11,18 +11,19 @@
     <script src="p5.min.js"></script>
     <script src="leaflet.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="p5.geolocation.js"></script>
     <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
     <script src="sketch for map.js"></script>
-    <!--<script src="sketch for form.js"></script>-->
+
   </head>
   <body>
     <div id="tela">
     </div>
 
-    <div id="textsupport" style="display:block;">
+    <div id="textsupport" style="display:block; margin-right: 1%;">
       <h1 class = "button"> SUPPORT </h1>
     </div>
-    <div id="textback" style="display:none;">
+    <div id="textback" style="display:none; margin-right: 1%;">
       <h1>BACK</h1>
     </div>
 
