--- a/exploremenu.html
+++ b/exploremenu.html
@@ -84,10 +84,10 @@
   <!-- menu -->
   <div id="list">
     <ul>
-      <li class="menulist" id="menuchile"><a href="chileexplanation.html">chile</a></li>
-      <li class="menulist" id="menucolombia"><a href="colombiaexplanation.html">colombia</a></li>
-      <li class="menulist" id="menuhongkong"><a href="hongkongexplanation.html">hong kong</a></li>
-      <li class="menulist" id="menulebanon"><a href="lebanonexplanation.html">lebanon</a></li>
+      <li class="menulist" id="menuchile"><a href="chileexplanation.html"><abbr title="click for more">chile</abbr></a></li>
+      <li class="menulist" id="menucolombia"><a href="colombiaexplanation.html"><abbr title="click for more">colombia</abbr></a></li>
+      <li class="menulist" id="menuhongkong"><a href="hongkongexplanation.html"><abbr title="click for more">hong kong</abbr></a></li>
+      <li class="menulist" id="menulebanon"><a href="lebanonexplanation.html"><abbr title="click for more">lebanon</abbr></a></li>
       <li id="backhome"><a href="index2.html">back</a></li>
     </ul>
   </div>
