--- a/chileexplanation.html
+++ b/chileexplanation.html
@@ -21,47 +21,29 @@
       <h1 id="titoloabout"> Chile </h1>
       <h2 id="goto" class="subtitle"> <a href="mapchile.html"> go to the map</a> </h2>
       <h2 id="goto" class="subtitle"> <a href="exploremenu.html"> back to menu</a> </h2>
-      <p class="subtitleparabout"> “Five requests, not one less”
+      <p class="subtitleparabout"> “An oasis of stability”
         <p>
           <p class="parabout">
-            The conflict in Hong Kong, which began as a peaceful demonstration
-            to protect themselves against a bill to reform the law, ended up
-            becoming a symbol of the defence of democracy and Hong Kong’s Constitution.
-            <br> Hong Kong is a special administrative region of China. It has its
-            own currency, a political system and their own cultural identity, which
-            is different from those in mainland of China. This relationship of
-            'independent belonging' is foreseen by the formula "One China, two
-            systems", an expression which indicates the negotiated solution for
-            the return of Hong Kong under Chinese jurisdiction the year 2047.
-            </br>
-            <br> Today, Hong Kong's legal system still reflects the British model
-            and insists on transparency and fair trial. The principles are guaranteed
-            by the constitution, the Basic Law, which is based on common law and
-            protects rights other than those of the mainland Chinese. Among them
-            are the right to protest, free press and free speech. In general,
-            the law also establishes that the city has "a high degree of autonomy"
-            in all fields except foreign policy and defence. But many residents
-            claim that Beijing is violating these rights in a perceptible way.
-            </br>
+            Chile was just like an oasis, that seems to be the only Latin American
+            country that shows a strong economy and stability, but as well as
+            most oasis, it turned out to be a mirage.
           </p>
 
           <p class="subtitleparabout"> What triggered the protests? </p>
 
           <p class="parabout">
-            The crisis initiated when, by recommendation of a public
-            transportation panel, the president Sebastián Piñera decided to
-            increase the cost of the ticket of metro, reaching its maximum value
-            to 830 pesos (approx. 1,17USD). Some experts affirmed that the rate
-            hike is just the tip of the iceberg, because what is really behind
-            all of it is the inequality that has been the center of the main
-            debate of the latest days, insisting that Chilean social gap is
-            disproportionate, even though Chile has the strongest economy of
-            Latin American countries.  It’s also a cumulative discontent, where
-            the 30 pesos of a metro ticket has unleashed the uneasiness of 30
-            years of a failing democracy that nowadays follow the same constitution
-            that left the dictatorship of Pinochet. Most of the protest has to be
-            with the drafts of legislation that the current administration has
-            proposed. 
+            The crisis initiated when, by recommendation of a public transportation
+            panel, the president Sebastián Piñera decided to increase the cost of
+            the ticket of metro, reaching its maximum value to 830 pesos (approx.
+            1,17USD). Some experts affirmed that the rate hike is just the tip
+            of the iceberg, because what is really behind all of it is the inequality
+            that has been the center of the main debate of the latest days,
+            insisting that Chilean social gap is disproportionate, even though
+            Chile has the strongest economy of Latin American countries.  It’s
+            also a cumulative discontent, where the 30 pesos of a metro ticket
+            has unleashed the uneasiness of 30 years of a failing democracy that
+            nowadays follow the same constitution that left the dictatorship of
+            Pinochet.
           </p>
 
 
@@ -69,49 +51,26 @@
             <img class="imgs" src="img/Chile/Chile_1.jpg"></img>
           </div>
 
-          <p class="parabout"> The current protests in Hong Kong have part of their origin
-            in the Umbrella Revolution. Both protests have young people as
-            promoters and main protesters, but in the Umbrella Revolution,
-            the Hong Kong people took to the streets to demand universal
-            suffrage and direct election of the local government, while in
-            the current protests they began with a project of law reform.
+  <p class="subtitleparabout"> What do people aim with the protests?<p>
 
-            <br> The mobilizations began the 31st March 2019 as a protest
-            against the proposed reform of the Extradition Law, presented
-            by the Carrie Lam government, that proposed that China could
-            judge Hong Kong criminals. </br>
+          <p class="parabout"> People were originally protesting because, though
+            there has been a growth of the middle class, it is actually a precarious
+            middle class, where there are lower pensions, high levels of debt and
+            salary doesn’t represent anything compared to the expenses. So it
+            turns out to be a situation of daily uncertainty.
+            <br> But, even though it was an argued petition, the government
+            responded with such force, that people ended up remembering the days
+            of the dictatorship where many people was unfairly killed because of
+            it. After days of protest, President Piñera imposed a state of
+            emergency and a curfew, sending over 10.000 soldiers to the streets
+            with armed vehicles.</br>
 
-            <br> The extradition law is the practice whereby a state
-            surrenders to another state an individual who is in his
-            territory, but who is subject to criminal prosecution in the
-            other. The amendment would have forced the region to hand
-            over people investigated from Beijing to China for certain
-            crimes. However, the Hongkongers did not agree and understood
-            the risk of human rights violations, and the use of extradition
-            by the Chinese as a pretext to reach the political dissidents
-            who took refuge in Hong Kong.
-            </br>
-
-            <br> Street protests officially began on June 9, with a
-            million people taking to the streets. It was a series of
-            peaceful rallies and demonstrations in the streets. Tired of
-            not observing much government reaction, some groups broke
-            into Parliament.
-            </br>
-
-            <br> In summer marches became increasingly frequent.
-            Protesters closed the city airport, considered a key point
-            for their safety and to get their message to the international
-            community and the police began trying to stop protesters
-            throwing eggs, bricks and Molotov cocktails with tear gas,
-            air shots (which wounded a man) and water cannons.
-            </br>
-            <br> In a rather clever and technological way. Thousands in
-            recent months have used protest "means" never seen before:
-            among others, lasers and gas masks to avoid facial recognition;
-            chat via Telegram to circumvent Chinese digital surveillance;
-            manga-style posters circulated virally on the net; street
-            skittles and water to put out the smoke.
+            <br> The state of emergency was lifted, and yet the police are still
+            taking violent action against people. Since then 20 people have died,
+            1000 were injured and more than 3500 has been arrested. The public
+            opinion is now pushing for the impeachment of Pinera if he doesn’t
+            listen to people and a “constituent assembly” for a new constitution,
+            along with their original requests.
             </br>
           </p>
 
@@ -121,41 +80,23 @@
             <img class="imgs" src="img/Chile/Chile_2.jpg"></img>
           </div>
 
-          <p class="subtitleparabout"> What do people aim with the protests?<p>
-
-              <p class="parabout">
-                At first, the protests were focused on asking that this
-                reform not to be carried out, but as time went by, the
-                claims were mutated towards the reinforcement of its
-                Basic Law, its constitution model.
-                <br> The protesters made five main requests: to withdraw
-                the bill that envisages extradition to China (which took
-                place on 24 October); the resignation of the head of the
-                Hong Kong executive, Carrie Lam; an investigation into
-                the brutality expressed by the police during the protests;
-                the release of those who have been arrested; more
-                democratic freedoms.
-                </br>
-              </p>
-
               <p class="subtitleparabout"> What are the consequences of the protests?<p>
 
                   <p class="parabout">
-                    Mainland China is Hong Kong's main trading partner,
-                    but the city is primarily an international economic
-                    and financial centre. According to the American Chamber
-                    of Commerce in Hong Kong, several companies have reported
-                    "serious consequences of the outage", including disruption
-                    of supply chains. Hong Kong companies, have also come
-                    under pressure and have been accused of sympathizing
-                    with the protesters.
-                    <br> The cancelled flights have represented damage
-                    to the companies operating in the financial hub. The
-                    airport contributes 5% of the city's GDP. Over 74
-                    million passengers travelled to and from Hong Kong
-                    last year. The airport operates 1,100 passenger and
-                    freight flights every day and serves around 200
-                    destinations worldwide.
+                    First of all, one of the big consequences has been the deep
+                    distrust of the current political class and Pinera’s
+                    administration. Chile’s president failed constantly
+                    understanding people claims turning the protest into what
+                    he himself called publicly: “a war”. Since then the number
+                    of deaths, detentions, tortures and injured has rose up to
+                    thousands, and the government has been denouncing a systematic
+                    violation of people’s rights, whether they protested or not.
+                    <br> After a month, this turns out to be the most sustained
+                    protests Chile has seen since the end of military dictatorship,
+                    and this marks a precedent not only for Latin America, but
+                    to the world. People has managed to push the president to
+                    delivered his final concession: rewrite the country’s
+                    constitution.
                     </br>
                   </p>
 
@@ -163,24 +104,27 @@
                     <img class="imgs" src="img/Chile/Chile_4.jpg"></img>
                   </div>
 
-                  <p class="subtitleparabout"> Hong Kong now <p>
-                      <p class="parabout"> Beijing leaders do not seem to
-                        have the slightest intention of accepting the
-                        activists' requests. Although Hong Kong is a special
-                        case in China, accepting the demands of protesters
-                        would mean not only taking the risk that someone
-                        unwelcome comes to power but would also create a
-                        dangerous precedent: the possibility of a democratic
-                        change in the rest of the country, which would thus
-                        endanger the regime's absolute authority.
-                        <br> Protesters ask to be heard and that the police
-                        account for what they consider brutality. So far
-                        6,500 people have been arrested, only the first
-                        day of this year were more than 400 arrests. The
-                        underlying problem will remain latent.
-                        </br>
+                  <p class="subtitleparabout"> Chile now <p>
+                      <p class="parabout"> The general feeling right now could
+                        be called: “uncertainty”, because even if the new
+                        constitution gets rewritten, there’s no guarantee of
+                        Chile being again what it once was. What people are
+                        protesting for, is really a complaint built up over
+                        generations that finally are being told. But that’s
+                        also the big  problem, those issues couldn’t be solve
+                        only with the promise of a new constitution, it needs
+                        most of all, time, something that President Pinera
+                        seems not to have. Hence, as many other countries,
+                        the Chilean protest is because of an historical widespread
+                        inequality, even though Chile was the one apparently safest
+                        country among a turbulent Latin America. This protest has
+                        shown to the world, how if this matters are not taking
+                        into account carefully, the same mistakes could be
+                        repeated elsewhere. Which is actually the irony, because
+                        is the rooted reason why some other countries are
+                        protesting as well.
                       </p>
-                      <p class="subtitleparabout" style="color:#ff8676; margin:0% 21% 8% 21%"> <a href="maphongkong.html"> Be part of the Hong Kong fight in a P A C I F I C way! </a> </p>
+                      <p class="subtitleparabout" style="color:#ff8676; margin:0% 21% 8% 21%"> <a href="maphongkong.html"> Be part of the Chile fight in a P A C I F I C way! </a> </p>
 
 
     </div>
