--- a/mapchile.html
+++ b/mapchile.html
@@ -26,6 +26,9 @@
     <div id="textback" style="display:none; margin-right: 1%;">
       <h1>BACK</h1>
     </div>
+    <div id="speaker">
+      <img src="speaker.png">
+  </div>
 
     <div id="form" style="display:none;">
       <h2>Where are you from?</h2>
