Modification of font size

--- a/lebanonexplanation.html
+++ b/lebanonexplanation.html
@@ -88,7 +88,7 @@
                   <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
                   <div style="margin:0% 21% 0% 21%">
-                    <img class="imags" src="img/Lebanon/Lebanon_2.jpg"></img>
+                    <img class="imgs" src="img/Lebanon/Lebanon_2.jpg"></img>
                   </div>
 
                   <p class="subtitleparabout"> What are the consequences of the protests?<p>
