--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         something much bigger than themselves is what drives them to find new
         means of protesting collectively”. Here is where things like the
         “cacerolazo” appear.</br>
-        <br> Caserolazo cames from the Spanish word “cacerola” that means pot.
+        <br> Cacerolazo comes from the Spanish word “cacerola” that means pot.
         One of the main elements people is using to show their discomfort is the
         sound of banged pots. The cacerolazo consists of a group of people making
         noise by banging pots, pans and other kitchen utensils in order to call
