--- a/exploremenu.html
+++ b/exploremenu.html
@@ -7,9 +7,9 @@
   <link rel="icon" href="logo.png">
   <title> We are louder! </title>
   <link rel="stylesheet" type="text/css" href="style0.css">
-  <script src="p5.min.js"></script>
-  <script src="p5.sound.min.js"></script>
-  <script src="sketch explore page.js"></script>
+  <script src="./addons/p5.min.js"></script>
+  <script src="./addons/p5.sound.min.js"></script>
+  <script src="./addons/sketch explore page.js"></script>
 </head>
 
 <body>
