--- a/mapchile.html
+++ b/mapchile.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style0.css">
     <style>
   </style>
-    <script src="p5.min.js"></script>
-    <script src="leaflet.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="p5.geolocation.js"></script>
+    <script src="./addons/p5.min.js"></script>
+    <script src="./addons/leaflet.js"></script>
+    <script src="./addons/p5.sound.min.js"></script>
+    <script src="./addons/p5.geolocation.js"></script>
     <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
-    <script src="sketch for map.js"></script>
+    <script src="./addons/sketch for map.js"></script>
 
   </head>
   <body>
