--- a/about.html
+++ b/about.html
@@ -70,8 +70,11 @@
         for attention.</br>
         <br>This sound is going to be the main element, the <strong>symbol</strong>
         used to join these movements in a <strong>pacific way</strong>.</br>
+      </p>
 
-</p>
+        <p class="subtitleparabout"> References </p>
+        <p class="parabout"> <a href= "Files/Pdfs/references.pdf" target="_blank"> Check out the references </a> </p>
+
 
       <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
       <div style="height:200px; margin:8% 21% 0% 21%">
