--- a/exploremenu.html
+++ b/exploremenu.html
@@ -23,7 +23,7 @@
   <!-- div a comparsa -->
   <!-- chile -->
   <div id="chile">
-    <img class="chilean" src="img/maps/chilemap.png">
+    <img class="chilean" src="Files/maps/chilemap.png">
     <div class="abstract">
       <h1 class="titolet">CHILE</h1>
       <p>"The protests in Chile consist of a series of demonstrations and
@@ -38,7 +38,7 @@
   </div>
 <!-- colombia -->
 <div id="colombia">
-  <img class="chilean" src="img/maps/colombiamap.png">
+  <img class="chilean" src="Files/maps/colombiamap.png">
   <div class="abstract">
     <h1 class="titolet">COLOMBIA</h1>
     <p>"Colombia is being active in demonstrations since the end of 2019. The
@@ -55,7 +55,7 @@
 </div>
 <!-- hong kong -->
 <div id="hongkong">
-  <img class="chilean" src="img/maps/hongmap.png">
+  <img class="chilean" src="Files/maps/hongmap.png">
   <div class="abstract">
     <h1 class="titolet">HONG KONG</h1>
     <p>"Hong Kong has been involved in several demonstrations since the 31 of March 2019.
@@ -67,7 +67,7 @@
 </div>
 <!-- lebanon -->
 <div id="lebanon">
-  <img class="chilean" src="img/maps/lebanonmap.png">
+  <img class="chilean" src="Files/maps/lebanonmap.png">
   <div class="abstract">
     <h1 class="titolet">LEBANON</h1>
     <p>"Lebanon demonstrations have been taking place since 17 October 2019.
