--- a/hongkongexplanation.html
+++ b/hongkongexplanation.html
@@ -60,7 +60,7 @@
 
 
                 <div style="margin:0% 21% 0% 21%">
-                  <img class="imgs" src="img/Hong Kong/Hong_Kong_1.jpg"></img>
+                  <img class="imgs" src="Files/Hong Kong/Hong_Kong_1.jpg"></img>
                 </div>
 
               <p class="parabout"> The current protests in Hong Kong have part of their origin
@@ -112,7 +112,7 @@
               <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
               <div style="margin:0% 21% 0% 21%">
-                <img class="imgs" src="img/Hong Kong/Hong_Kong_3.jpg"></img>
+                <img class="imgs" src="Files/Hong Kong/Hong_Kong_3.jpg"></img>
               </div>
 
               <p class="subtitleparabout"> What do people aim with the protests?<p>
@@ -154,7 +154,7 @@
                       </p>
 
                       <div style="margin:0% 21% 0% 21%">
-                        <img class="imgs" src="img/Hong Kong/Hong_Kong_2.jpg"></img>
+                        <img class="imgs" src="Files/Hong Kong/Hong_Kong_2.jpg"></img>
                       </div>
 
                       <p class="subtitleparabout"> Hong Kong now <p>
