--- a/colombiaexplanation.html
+++ b/colombiaexplanation.html
@@ -47,7 +47,7 @@
           </p>
 
           <div style="margin:0% 21% 0% 21%">
-            <img class="imgs" src="img/Colombia/Colombia_3.jpg"></img>
+            <img class="imgs" src="Files/Colombia/Colombia_3.jpg"></img>
           </div>
 
           <p class="subtitleparabout"> What do people aim with the protests? </p>
@@ -69,7 +69,7 @@
 
 
                 <div style="margin:0% 21% 0% 21%">
-                  <img class="imgs" src="img/Colombia/Colombia_2.jpg"></img>
+                  <img class="imgs" src="Files/Colombia/Colombia_2.jpg"></img>
                 </div>
               <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
@@ -94,7 +94,7 @@
                   </p>
 
                       <div style="margin:0% 21% 0% 21%">
-                        <img class"imgs" src="img/Colombia/Colombia_1.jpg"></img>
+                        <img class"imgs" src="Files/Colombia/Colombia_1.jpg"></img>
                       </div>
 
                       <p class="subtitleparabout"> Colombia now <p>
