--- a/lebanonexplanation.html
+++ b/lebanonexplanation.html
@@ -50,7 +50,7 @@
               </p>
 
               <div style="margin:0% 21% 0% 21%">
-                <img class="imgs" src="img/Lebanon/Lebanon_1.jpg"></img>
+                <img class="imgs" src="Files/Lebanon/Lebanon_1.jpg"></img>
               </div>
 
               <p class="subtitleparabout"> What do people aim with the protests? <p>
@@ -88,7 +88,7 @@
                   <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
                   <div style="margin:0% 21% 0% 21%">
-                    <img class="imgs" src="img/Lebanon/Lebanon_2.jpg"></img>
+                    <img class="imgs" src="Files/Lebanon/Lebanon_2.jpg"></img>
                   </div>
 
                   <p class="subtitleparabout"> What are the consequences of the protests?<p>
@@ -112,7 +112,7 @@
                       </p>
 
                       <div style="margin:0% 21% 0% 21%">
-                        <img class="imgs" src="img/Lebanon/Lebanon_3.jpg"></img>
+                        <img class="imgs" src="Files/Lebanon/Lebanon_3.jpg"></img>
                       </div>
 
                         <p class="subtitleparabout"> Lebanon now <p>
