--- a/Files/Pdfs/We are louder! __ HOW IT WORKS.htm
+++ b/Files/Pdfs/We are louder! __ HOW IT WORKS.htm
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <link rel="icon" href="logo.png">
+<!-- saved from url=(0030)http://localhost:8000/how.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <meta name="viewport" width="device-width," initial-scale="1.0," maximum-scale="1.0," user-scalable="0">
+  <link rel="icon" href="http://localhost:8000/logo.png">
   <title> We are louder! || HOW IT WORKS </title>
-  <link rel="stylesheet" type="text/css" href="style0.css">
+  <link rel="stylesheet" type="text/css" href="./We are louder! __ HOW IT WORKS_files/style0.css">
 </head>
 
-<body id="backabout">
+<body id="backabout" data-gr-c-s-loaded="true">
   <a name="ancora"></a>
 
 
@@ -19,42 +18,43 @@
 
 
       <h1 id="titoloabout">HOW IT WORKS</h1>
-      <h2 id="goto" class="subtitle"> <a href="index2.html"> back </a> </h2>
+      <h2 id="goto" class="subtitle"> <a href="http://localhost:8000/index2.html"> back </a> </h2>
       <p class="parabout">The world is being shaken by the constant demonstrations
         happening in different countries all over the world. They all have
         something in common, people are being united to fight for something
         bigger than them, for their own rights, and they want to be heard. You
         can be part of this fight by joining them in a peaceful virtual way.
-        <br></br>
+        <br><br>
         <br> With this website, you are able
         to support them at a distance, you don’t have to be near in a physical
-        way but with your heart. But how can you demonstrate your support? </br>
+        way but with your heart. But how can you demonstrate your support? <br>
+        <br> The aim is doing as much noise as we can to show our loudness.<br>
 
-        <h1 id="titoloabout" style="margin:3% 21% 3% 21%">01</h1>
+        </p><h1 id="titoloabout">01</h1>
         <p class="parabout center">Explore what is happening around the world and get in touch with
         the different protest. Then, select the country you want to support and
         get deeper into your understanding of the topic.</p>
 
         <div style="margin:0% 21% 0% 21%">
-          <img class="imgs" src="Files/svgs/how_to1.svg"></img>
+          <img class="imgs" src="./We are louder! __ HOW IT WORKS_files/how_to1.svg">
         </div>
 
-        <h1 id="titoloabout" style="margin:3% 21% 3% 21%" >02</h1>
+        <h1 id="titoloabout">02</h1>
 
         <p class="parabout center"> When you feel ready you can join the peaceful fight
-          and get louder. </p>
+          and make some noise. </p>
 
           <div style="margin:0% 21% 0% 21%">
-            <img class="imgs" style="height:10vw" src="Files/svgs/how_to2.svg"></img>
+            <img class="imgs" style="height:10vw" src="./We are louder! __ HOW IT WORKS_files/how_to2.svg">
           </div>
 
-        <h1 id="titoloabout" style="margin:6% 21% 3% 21%">03</h1>
-        <p class="parabout center">Fill the form with your data and watch what happens!</br>
+        <h1 id="titoloabout">03</h1>
+        <p class="parabout center">Fill the form with your data and watch what happens!<br>
 
-          <div style="margin:0% 21% 0% 21%">
-            <img class="imgs" src="Files/svgs/how-to3.svg"></img>
+          </p><div style="margin:0% 21% 0% 21%">
+            <img class="imgs" src="./We are louder! __ HOW IT WORKS_files/how-to3.svg">
           </div>
-</p>
+<p></p>
 
 
 
@@ -62,7 +62,7 @@
       <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
       <div style="height:200px; margin:8% 21% 0% 21%">
         <div id="logopoli" style="display:block; float:left;">
-          <img src="logo-polimi-w.svg"></img>
+          <img src="./We are louder! __ HOW IT WORKS_files/logo-polimi-w.svg">
         </div>
         <div id="teachers">
           <h3 style="margin-top: 7%; margin-left: 0%;">Teachers:</h3>
@@ -87,14 +87,15 @@
   <footer>
     <ul id="red">
       <li class="footerstring">© We Are Louder</li>
-      <li class="footerstring"><a href="about.html">about us</a></li>
-      <li class="footerstring"><a href="exploremenu.html">explore and join!</a></li>
-      <li class="footerstring"><a href="#ancora">Top</a></li>
+      <li class="footerstring"><a href="http://localhost:8000/about.html">about us</a></li>
+      <li class="footerstring"><a href="http://localhost:8000/exploremenu.html">explore and join!</a></li>
+      <li class="footerstring"><a href="http://localhost:8000/how.html#ancora">Top</a></li>
     </ul>
   </footer>
 
 
-</body>
-</body>
 
-</html>
+
+
+
+</body></html>
