--- a/exploremenu.html
+++ b/exploremenu.html
@@ -88,7 +88,7 @@
       <li class="menulist" id="menucolombia"><a href="colombiaexplanation.html"><abbr title="click for more">colombia</abbr></a></li>
       <li class="menulist" id="menuhongkong"><a href="hongkongexplanation.html"><abbr title="click for more">hong kong</abbr></a></li>
       <li class="menulist" id="menulebanon"><a href="lebanonexplanation.html"><abbr title="click for more">lebanon</abbr></a></li>
-      <li id="backhome"><a href="index2.html">back</a></li>
+      <li id="backhome" style="text-decoration:none"><a href="index2.html">back</a></li>
     </ul>
   </div>
 </div>
