--- a/chileexplanation.html
+++ b/chileexplanation.html
@@ -124,7 +124,7 @@
                         is the rooted reason why some other countries are
                         protesting as well.
                       </p>
-                      <p class="subtitleparabout" style="color:#ff8676; margin:0% 21% 8% 21%"> <a href="maphongkong.html"> Be part of the Chile fight in a P A C I F I C way! </a> </p>
+                      <p class="subtitleparabout" style="color:#ff8676; margin:0% 21% 8% 21%"> <a href="mapchile.html"> Be part of the Chile fight in a P A C I F I C way! </a> </p>
     </div>
 
   </main>
