--- a/public/maphongkong.html
+++ b/public/maphongkong.html
@@ -14,7 +14,7 @@
     <script src="./addons/p5.sound.min.js"></script>
     <script src="./addons/p5.geolocation.js"></script>
     <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
-    <script src="./addons/sketch for map.js"></script>
+    <script src="./addons/sketch for map hongkong.js"></script>
 
   </head>
   <body>
